; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ser-go32.c_dos_putc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ser-go32.c_dos_putc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dos_ttystate = type { i32, i32*, i32 }

@CBSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.dos_ttystate*)* @dos_putc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dos_putc(i32 %0, %struct.dos_ttystate* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.dos_ttystate*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.dos_ttystate* %1, %struct.dos_ttystate** %5, align 8
  %6 = load %struct.dos_ttystate*, %struct.dos_ttystate** %5, align 8
  %7 = getelementptr inbounds %struct.dos_ttystate, %struct.dos_ttystate* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @CBSIZE, align 4
  %10 = sub nsw i32 %9, 1
  %11 = icmp sge i32 %8, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %34

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.dos_ttystate*, %struct.dos_ttystate** %5, align 8
  %16 = getelementptr inbounds %struct.dos_ttystate, %struct.dos_ttystate* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = load %struct.dos_ttystate*, %struct.dos_ttystate** %5, align 8
  %19 = getelementptr inbounds %struct.dos_ttystate, %struct.dos_ttystate* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.dos_ttystate*, %struct.dos_ttystate** %5, align 8
  %22 = getelementptr inbounds %struct.dos_ttystate, %struct.dos_ttystate* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = add nsw i32 %20, %23
  %25 = load i32, i32* @CBSIZE, align 4
  %26 = sub nsw i32 %25, 1
  %27 = and i32 %24, %26
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %17, i64 %28
  store i32 %14, i32* %29, align 4
  %30 = load %struct.dos_ttystate*, %struct.dos_ttystate** %5, align 8
  %31 = getelementptr inbounds %struct.dos_ttystate, %struct.dos_ttystate* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 8
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %13, %12
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
